updated RSS podcast feed: simplified podcast subscribe links, added iTunes podcast feed subscribe badge, fixed broken podcast search box (which was wrapping to a second line because we added a new year filter button for podcasts in 2013)

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -576,7 +576,7 @@ label.iOSCheckLabelOff {
       margin: 21px 0 0 140px;
       vertical-align: top; }
     #joyent {
-      padding-top: 24px;
+      padding-top: 12px;
       margin: -10px 0 0 10px;
       clear: left;
       font-size: 14px;
@@ -614,6 +614,21 @@ label.iOSCheckLabelOff {
       width: 121px;
       &:hover {
         color: white; } } } }
+
+	.or {
+		display: inline-block;
+		height: 40px;
+		margin: 0 0 0 10px;
+		width: 20px;
+		text-align: center;
+		span {
+			display: block;
+			position: absolute;
+		  margin: 10px 0 0 0;
+			text-align: center;
+			z-index: 2;
+		}
+	}
 
 #sponsor {
   #newrelic {
@@ -673,7 +688,7 @@ ul#filter {
         border: 1px solid #555555; } } }
   li:last-child {
     margin: 0 !important;
-    width: 260px !important;
+    width: 180px !important;
   }
   li.current {
     span {
